# ChangeLog for Gentoo System Intialization ("rc") scripts
# Copyright 1999-2006 Gentoo Foundation; Distributed under the GPLv2

  05 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    iproute deletes addresses again, fixes #117799.

    dhclient now supports dhclient-enter-hooks, #117763.

* baselayout-1.12.0_pre13 (04 Jan 2006)

  03 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    net scripts now work with bash-3.1-r2, #116352.

  02 Jan 2006; Roy Marples <uberlord@gentoo.org>:

    Interfaces can be dynamically added to bridges again, #117406.
    Updated copyright to 2006.

  29 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Support old gateway var again for ifconfig, #116761.

  21 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Add new variable RC_DOWN_INTERFACE and documentation so that interfaces
    are kept up for Wake On LAN support, #113880.

* baselayout-1.12.0_pre12 (20 Dec 2005)

  20 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Ensure that tty has keyboard and stty reports icanon before enabling
    interactive rc, #112161.

  15 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    When setting ad-hoc or master modes, set the mode before anything else,
    #115664 thanks to Oldrich Jedlicka.

  14 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Add great big warning in documentation advising people not to use the
    IPv6 examples if they don't have IPv6 enabled in their kernel, #115396.

  09 Dec 2005; Roy Marples <uberlord@gentoo.org>:

    Remove nasty undocumented backgrounding as we now support
    ifplugd, netplug and wpa_supplicant-0.4.x which do much better jobs.

  06 Dec 2005; Roy Marples <uberlord@gentoo.org>:

     ppp documentation updated, #114551.

  05 Dec 2005; Roy Marples <uberlord@gentoo.org>:

     Fix dhcp options, #114519.

  28 Nov 2005; Roy Marples <uberlord@gentoo.org>:

    Fixed fallback_routes, #113776.
    Fixed variable array references, #113661.
    Fixed iwconfig mode selection, #113677 - thanks to Tuan Van.